fix(revision-note): used white-space: pre-wrap to handle whitespaces in revision notes

--- a/src/client/stylesheets/style.less
+++ b/src/client/stylesheets/style.less
@@ -401,6 +401,7 @@ hr.wide {
 		&::after {
 			content: close-quote;
 		}
+		white-space: pre-wrap;
 	}
 	.note-author {
 		&:extend(.small);
